--- a/src/20-duration-without-cancellation.html
+++ b/src/20-duration-without-cancellation.html
@@ -20,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon//favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
+
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -29,10 +30,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -40,16 +47,17 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid">
+                <div class="container-fluid text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
 
                     </div>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -83,23 +91,30 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2">
-                        <img src="./images/user.svg" alt="">
+                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-left" aria-current="page" href="#"> <img
+                                            src="./images/message-question-blue.svg" alt=""
+                                            class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
+                                        Help
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link  text-left" href="#">
+                                        <img src="./images/user-blue.svg" alt=""
+                                            class="nav-icon d-inline-block  nav-icon-mob">
+                                        User</a>
                                 </li>
 
                             </ul>
@@ -110,33 +125,73 @@
             </nav>
             <div class="content-main">
                 <div class="content">
-                    <div class="container mt-5 pt-5">
-                        <h3 class="title  text-center">When would you like your insurance to start</h3>
-                        <p class="sub-title mt-2  text-center">Select your preferred date when you want to start policy</p>
-                        <form>
-                            <div class="white-box  contain-wrapper-sm mb-4 mt-4">
-                                <h4 class="fs-18 mb-4">Policy Effective from</h4>
-                                <div>
-                                    <label class="radio-inline mb-3" for="now">
-                                        <input class="radio-control" type="radio" name="country" value="" id="now" checked="">
-                                        <span class="radio-custom"></span>
-                                        <span class="radio-label">Right Now</span>
-                                    </label>
-                                    <label class="radio-inline" for="custom">
-                                        <input class="radio-control" type="radio" name="country" value="" id="custom">
-                                        <span class="radio-custom"></span>
-                                        <span class="radio-label">Custom Date</span>
-                                    </label>
-                                    <div class="width-300px mt-3">
-                                        <input class="form-control date-control" type="text"
-                                            onfocus="(this.type='date')" id="date"
-                                            placeholder="Birth Date" value="Mar 26, 2023" />
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:20%">
+
                                     </div>
-                                    <p class="note mt-3">If you select 7 days or less from today you can get an extra discount</p>
+
+                                </div>
+                                <div class="progress-text mt-1">Drivers</div>
+                            </div>
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:0%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Vehicles
                                 </div>
                             </div>
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:0%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Discounts</div>
+                            </div>
+                        </div>
+                        <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
+                    </div>
+                    <div class="container mt-5 pt-5">
+                        <div class="text-center mb-4 user-info">
+                            <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
+                        </div>
+                        <h3 class="title  text-center">How long have you had insurance, without lapse</h3>
+
+
+                        <form class="text-center mt-3">
+                            <div class="mb-4">
+
+                                <div class="f-group width-400px">
+
+                                    <select class="f-control f-dropdown" placeholder="Select Time" id="multiple"
+                                        class="js-states form-control" multiple>
+                                        <option value="">Select Time</option>
+                                        <option value="1" selected>Select Time 1
+                                        </option>
+                                        <option value="2">Select Time 2
+                                        </option>
+
+                                    </select>
+                                </div>
+
+                            </div>
+
+
                             <button type="submit" class="btn btn-primary mx-auto"><span>Continue</span></button>
                         </form>
+
                     </div>
                 </div>
             </div>
