--- a/src/21-start-insurance.html
+++ b/src/21-start-insurance.html
@@ -29,7 +29,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
@@ -40,16 +43,17 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid">
+                <div class="container-fluid text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
 
                     </div>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -83,23 +87,30 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2">
-                        <img src="./images/user.svg" alt="">
+                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-left" aria-current="page" href="#"> <img
+                                            src="./images/message-question-blue.svg" alt=""
+                                            class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
+                                        Help
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link  text-left" href="#">
+                                        <img src="./images/user-blue.svg" alt=""
+                                            class="nav-icon d-inline-block  nav-icon-mob">
+                                        User</a>
                                 </li>
 
                             </ul>
@@ -110,48 +121,69 @@
             </nav>
             <div class="content-main">
                 <div class="content">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:20%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Drivers</div>
+                            </div>
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:0%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Vehicles
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:0%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Discounts</div>
+                            </div>
+                        </div>
+                        <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
+                    </div>
                     <div class="container mt-5 pt-5">
-                        <h3 class="title  text-center">Is this your Current Address?</h3>
+                        <h3 class="title  text-center">When would you like your insurance to start</h3>
+                        <p class="sub-title mt-2  text-center">Select your preferred date when you want to start policy
+                        </p>
                         <form>
                             <div class="white-box  contain-wrapper-sm mb-4 mt-4">
-                                <div class="mb-4">
-                                    <h4 class="fs-18 mb-12px">Edit address if it’s changed</h4>
-                                    <input class="form-control" type="text" value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
-                                </div>
-                                <div class="mb-4">
-                                    <h4 class="fs-18 mb-12px">Are all vehicles normally parked here at night?</h4>
-                                    <div class="d-flex">
-                                        <label class="radio-inline w-auto me-4" for="Yes">
-                                            <input class="radio-control" type="radio" name="address" value="yes" id="Yes" checked="">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">Yes</span>
-                                        </label>
-                                        <label class="radio-inline w-auto" for="NO">
-                                            <input class="radio-control" type="radio" name="address" value="no" id="NO">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">No</span>
-                                        </label>
-                                    </div>
-                                    <input class="form-control address-field mt-3" type="text" value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
-                                </div>
-
+                                <h4 class="fs-18 mb-4">Policy Effective from</h4>
                                 <div>
-                                    <h4 class="fs-18 mb-12px">Is this your mailing address?</h4>
-                                    <div class="d-flex">
-                                        <label class="radio-inline w-auto me-4" for="mail-Yes">
-                                            <input class="radio-control" type="radio" name="mail-address" value="yes" id="mail-Yes" checked="">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">Yes</span>
-                                        </label>
-                                        <label class="radio-inline w-auto" for="mail-No">
-                                            <input class="radio-control" type="radio" name="mail-address" value="no" id="mail-No">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">No</span>
-                                        </label>
+                                    <label class="radio-inline mb-3" for="now">
+                                        <input class="radio-control" type="radio" name="country" value="" id="now"
+                                            checked="">
+                                        <span class="radio-custom"></span>
+                                        <span class="radio-label">Right Now</span>
+                                    </label>
+                                    <label class="radio-inline" for="custom">
+                                        <input class="radio-control" type="radio" name="country" value="" id="custom">
+                                        <span class="radio-custom"></span>
+                                        <span class="radio-label">Custom Date</span>
+                                    </label>
+                                    <div class="width-300px mt-3">
+                                        <input class="form-control date-control" type="text"
+                                            onfocus="(this.type='date')" id="date" placeholder="Birth Date"
+                                            value="Mar 26, 2023" />
                                     </div>
-                                    <input class="form-control mail-address-field mt-3" type="text" value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
+                                    <p class="note mt-3">If you select 7 days or less from today you can get an extra
+                                        discount</p>
                                 </div>
-                              
                             </div>
                             <button type="submit" class="btn btn-primary mx-auto"><span>Continue</span></button>
                         </form>
@@ -169,22 +201,6 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/app.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('.address-field').hide()
-            $('.mail-address-field').hide()
-
-            $('input[name=address]').on('change', function(){
-                let val = $( 'input[name=address]:checked' ).val();
-                val === 'no' ?  $('.address-field').show() :  $('.address-field').hide()
-            })
-            $('input[name=mail-address]').on('change', function(){
-                let val = $( 'input[name=mail-address]:checked' ).val();
-                val === 'no' ?  $('.mail-address-field').show() :  $('.mail-address-field').hide()
-            })
-
-        })
-    </script>
 
 </body>
 
