--- a/src/24-current-address.html
+++ b/src/24-current-address.html
@@ -30,7 +30,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
@@ -44,16 +47,17 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid">
+                <div class="container-fluid text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
 
                     </div>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -87,23 +91,30 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2">
-                        <img src="./images/user.svg" alt="">
+                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-left" aria-current="page" href="#"> <img
+                                            src="./images/message-question-blue.svg" alt=""
+                                            class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
+                                        Help
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link  text-left" href="#">
+                                        <img src="./images/user-blue.svg" alt=""
+                                            class="nav-icon d-inline-block  nav-icon-mob">
+                                        User</a>
                                 </li>
 
                             </ul>
@@ -117,7 +128,7 @@
 
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
@@ -125,9 +136,9 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">About your vehicle & Drivers</div>
+                                <div class="progress-text mt-1">Drivers</div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -135,9 +146,10 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Policy Limits</div>
+                                <div class="progress-text mt-1">Vehicles
+                                </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -145,7 +157,7 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Price Compare & Purchase</div>
+                                <div class="progress-text mt-1">Discounts</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -155,31 +167,23 @@
                             <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">Select Your Current Auto Insurance Company</h3>
+                        <h3 class="title  text-center">How long have you Lived at Current Address</h3>
 
-
-                        <form class="text-center mt-3">
-                            <div class="mb-4">
-
-                                <div class="f-group width-400px">
-
-                                    <select class="f-control f-dropdown"
-                                        placeholder="Select Insurance Company" id="multiple"
-                                        class="js-states form-control" multiple>
-                                        <option value="">Select Insurance Company</option>
-                                        <option value="1" selected>Select Insurance Company 1
-                                        </option>
-                                        <option value="2">Select Insurance Company 2
-                                        </option>
-
-                                    </select>
+                        <p class="sub-title mt-2  text-center">Enter 0 or leave blank if doesn't apply
+                        </p>
+                        <div class="d-flex width-450px mt-4 mx-auto">
+                            <div class="row g-4">
+                                <div class="col-6">
+                                    <input class="form-control addPrefer" type="text" placeholder="Number of Years" />
                                 </div>
 
+                                <div class="col-6">
+                                    <input class="form-control addPrefer" type="text" placeholder="Number of Months" />
+                                </div>
                             </div>
+                        </div>
 
-
-                            <button type="submit" class="btn btn-primary mx-auto"><span>Continue</span></button>
-                        </form>
+                        <button type="submit" class="btn btn-primary mx-auto mt-3"><span>Continue</span></button>
 
                     </div>
                 </div>
