--- a/src/25-address.html
+++ b/src/25-address.html
@@ -20,7 +20,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon//favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
-
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -30,13 +29,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -44,16 +43,17 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid">
+                <div class="container-fluid text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
 
                     </div>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -87,23 +87,30 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2">
-                        <img src="./images/user.svg" alt="">
+                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-left" aria-current="page" href="#"> <img
+                                            src="./images/message-question-blue.svg" alt=""
+                                            class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
+                                        Help
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link  text-left" href="#">
+                                        <img src="./images/user-blue.svg" alt=""
+                                            class="nav-icon d-inline-block  nav-icon-mob">
+                                        User</a>
                                 </li>
 
                             </ul>
@@ -114,10 +121,9 @@
             </nav>
             <div class="content-main">
                 <div class="content">
-
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
@@ -125,9 +131,9 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">About your vehicle & Drivers</div>
+                                <div class="progress-text mt-1">Drivers</div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -135,9 +141,10 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Policy Limits</div>
+                                <div class="progress-text mt-1">Vehicles
+                                </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -145,42 +152,65 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Price Compare & Purchase</div>
+                                <div class="progress-text mt-1">Discounts</div>
                             </div>
                         </div>
-                        <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
                     </div>
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">How long have you had insurance, without lapse</h3>
+                        <h3 class="title  text-center">Is this your Current Address?</h3>
+                        <form>
+                            <div class="white-box  contain-wrapper-sm mb-4 mt-4">
+                                <div class="mb-4">
+                                    <h4 class="fs-18 mb-12px">Edit address if it’s changed</h4>
+                                    <input class="form-control" type="text"
+                                        value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
+                                </div>
+                                <div class="mb-4">
+                                    <h4 class="fs-18 mb-12px">Are all vehicles normally parked here at night?</h4>
+                                    <div class="d-flex">
+                                        <label class="radio-inline w-auto me-4" for="Yes">
+                                            <input class="radio-control" type="radio" name="address" value="yes"
+                                                id="Yes" checked="">
+                                            <span class="radio-custom"></span>
+                                            <span class="radio-label">Yes</span>
+                                        </label>
+                                        <label class="radio-inline w-auto" for="NO">
+                                            <input class="radio-control" type="radio" name="address" value="no" id="NO">
+                                            <span class="radio-custom"></span>
+                                            <span class="radio-label">No</span>
+                                        </label>
+                                    </div>
+                                    <input class="form-control address-field mt-3" type="text"
+                                        value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
+                                </div>
 
-
-                        <form class="text-center mt-3">
-                            <div class="mb-4">
-
-                                <div class="f-group width-400px">
-
-                                    <select class="f-control f-dropdown"
-                                        placeholder="Select Time" id="multiple"
-                                        class="js-states form-control" multiple>
-                                        <option value="">Select Time</option>
-                                        <option value="1" selected>Select Time 1
-                                        </option>
-                                        <option value="2">Select Time 2
-                                        </option>
-
-                                    </select>
+                                <div>
+                                    <h4 class="fs-18 mb-12px">Is this your mailing address?</h4>
+                                    <div class="d-flex">
+                                        <label class="radio-inline w-auto me-4" for="mail-Yes">
+                                            <input class="radio-control" type="radio" name="mail-address" value="yes"
+                                                id="mail-Yes" checked="">
+                                            <span class="radio-custom"></span>
+                                            <span class="radio-label">Yes</span>
+                                        </label>
+                                        <label class="radio-inline w-auto" for="mail-No">
+                                            <input class="radio-control" type="radio" name="mail-address" value="no"
+                                                id="mail-No">
+                                            <span class="radio-custom"></span>
+                                            <span class="radio-label">No</span>
+                                        </label>
+                                    </div>
+                                    <input class="form-control mail-address-field mt-3" type="text"
+                                        value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
                                 </div>
 
                             </div>
-
-
                             <button type="submit" class="btn btn-primary mx-auto"><span>Continue</span></button>
                         </form>
-
                     </div>
                 </div>
             </div>
@@ -195,6 +225,22 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/app.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.address-field').hide()
+            $('.mail-address-field').hide()
+
+            $('input[name=address]').on('change', function () {
+                let val = $('input[name=address]:checked').val();
+                val === 'no' ? $('.address-field').show() : $('.address-field').hide()
+            })
+            $('input[name=mail-address]').on('change', function () {
+                let val = $('input[name=mail-address]:checked').val();
+                val === 'no' ? $('.mail-address-field').show() : $('.mail-address-field').hide()
+            })
+
+        })
+    </script>
 
 </body>
 
