--- a/src/31-select-vehical-coverage.html
+++ b/src/31-select-vehical-coverage.html
@@ -118,7 +118,7 @@
                 <div class="content">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
@@ -126,9 +126,9 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">About your vehicle & Drivers</div>
+                                <div class="progress-text mt-1">Drivers</div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -136,9 +136,10 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Policy Limits</div>
+                                <div class="progress-text mt-1">Vehicles & Coverages
+                                </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -146,7 +147,7 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Price Compare & Purchase</div>
+                                <div class="progress-text mt-1">Discounts</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -157,14 +158,16 @@
                             <p class="user-welcome mt-2">Let’s Started!</p>
                         </div>
                         <h3 class="title  text-center">Select all Vehicles you want on this Policy</h3>
-                        <p class="sub-title mt-2  text-center">Please select the vehicles you want to include & coverage for each</p>
+                        <p class="sub-title mt-2  text-center">Please select the vehicles you want to include & coverage
+                            for each</p>
                         <div class="contain-wrapper-sm">
-                            <form class="mt-4" >
+                            <form class="mt-4">
                                 <div class="blue-light-box p-0">
                                     <div class="d-md-flex justify-content-between align-items-center car-block">
                                         <div class="flex-shrink-1">
                                             <label class="checkbox-inline mb-0 w-auto" for="Ford">
-                                                <input class="checkbox-control" type="checkbox" value="" id="Ford" checked>
+                                                <input class="checkbox-control" type="checkbox" value="" id="Ford"
+                                                    checked>
                                                 <span class="checkbox-custom"></span>
                                                 <span class="checkbox-label fs-18 fw-500">Ford Fiesta</span>
                                             </label>
@@ -173,11 +176,13 @@
                                             <div class="d-flex align-items-center justify-content-md-end">
                                                 <h5 class="fs-12 me-4 flex-shrink-0">Which coverage would you like</h5>
                                                 <label class="radio-box w-auto me-4" for="full">
-                                                    <input class="radio-box-control" type="radio" name="country2" value="" id="full" checked="">
+                                                    <input class="radio-box-control" type="radio" name="country2"
+                                                        value="" id="full" checked="">
                                                     <span class="radio-box-custom">FULL</span>
                                                 </label>
                                                 <label class="radio-box w-auto" for="basic">
-                                                    <input class="radio-box-control" type="radio" name="country2" value="" id="basic">
+                                                    <input class="radio-box-control" type="radio" name="country2"
+                                                        value="" id="basic">
                                                     <span class="radio-box-custom">BASIC </span>
                                                 </label>
                                             </div>
@@ -209,69 +214,75 @@
                                     <div class="row g-3">
                                         <div class="col-sm-4">
                                             <label class="radio-inline w-100" for="low">
-                                                <input class="radio-box-control" type="radio" name="Level"
-                                                    value="" id="low" checked>
+                                                <input class="radio-box-control" type="radio" name="Level" value=""
+                                                    id="low" checked>
                                                 <span class="radio-box-custom">LOW</span>
                                             </label>
                                         </div>
                                         <div class="col-sm-4">
                                             <label class="radio-box w-100" for="medium">
-                                                <input class="radio-box-control" type="radio" name="Level"
-                                                    value="" id="medium" >
+                                                <input class="radio-box-control" type="radio" name="Level" value=""
+                                                    id="medium">
                                                 <span class="radio-box-custom">MEDIUM</span>
                                             </label>
                                         </div>
                                         <div class="col-sm-4">
                                             <label class="radio-box w-100" for="high">
-                                                <input class="radio-box-control" type="radio" name="Level"
-                                                    value="" id="high" >
+                                                <input class="radio-box-control" type="radio" name="Level" value=""
+                                                    id="high">
                                                 <span class="radio-box-custom">HIGH</span>
                                             </label>
                                         </div>
                                     </div>
                                     <div class="mt-3">
                                         <label class="radio-box button-style w-100" for="Coverage">
-                                            <input class="radio-box-control" type="checkbox" name="Customize"
-                                                value="" id="Coverage">
+                                            <input class="radio-box-control" type="checkbox" name="Customize" value=""
+                                                id="Coverage">
                                             <span class="radio-box-custom">
-                                                <img src="images/configure-icon.svg" class="me-2"/>
-                                                 Customize Coverage
+                                                <img src="images/configure-icon.svg" class="me-2" />
+                                                Customize Coverage
                                             </span>
                                         </label>
                                         <div class="customize-options mt-3">
                                             <div class="d-flex justify-content-between">
                                                 <h4 class="fs-16 mb-2">Customize Options</h4 class="fs-16">
-                                                <label class="checkbox-inline w-auto me-3 mb-2" for="flexCheckDefault212">
-                                                    <input class="checkbox-control" type="checkbox" value="" id="flexCheckDefault212" checked="">
+                                                <label class="checkbox-inline w-auto me-3 mb-2"
+                                                    for="flexCheckDefault212">
+                                                    <input class="checkbox-control" type="checkbox" value=""
+                                                        id="flexCheckDefault212" checked="">
                                                     <span class="checkbox-custom"></span>
                                                     <span class="checkbox-label">Apply to all Vehicles</span>
                                                 </label>
                                             </div>
                                             <div class="row g-3">
                                                 <div class="col-sm-4">
-                                                    <input class="form-control" type="text" placeholder="Bodily Injured">
+                                                    <input class="form-control" type="text"
+                                                        placeholder="Bodily Injured">
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <input class="form-control" type="text" placeholder="Personal Injury Ded">
+                                                    <input class="form-control" type="text"
+                                                        placeholder="Personal Injury Ded">
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <input class="form-control" type="text" placeholder="Uninsured">
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <input class="form-control" type="text" placeholder="Property Damage">
+                                                    <input class="form-control" type="text"
+                                                        placeholder="Property Damage">
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <input class="form-control" type="text" placeholder="Optional Bodily Injury">
+                                                    <input class="form-control" type="text"
+                                                        placeholder="Optional Bodily Injury">
                                                 </div>
                                                 <div class="col-sm-4">
-                                                    <input class="form-control" type="text" placeholder="Medical Payments">
+                                                    <input class="form-control" type="text"
+                                                        placeholder="Medical Payments">
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                               <button type="submit"
-                                    class="btn btn-primary mx-auto mt-4"><span>Continue</span>
+                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </form>
                         </div>
@@ -280,51 +291,50 @@
             </div>
         </div>
     </main>
-    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel"
+        tabindex="-1">
         <div class="modal-dialog  modal-lg">
-          <div class="modal-content">
-            <div class="modal-header border-0">
-              <h3 class="modal-title fs-22" id="exampleModalToggleLabel">Fill the missing Details</h3>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="mb-4">
-                    <h4 class="title fs-18 mb-3">Driver 2</h4>
-                    <div class="row g-3">
-                        <div class="col-sm-6">
-                            <input class="form-control " type="text"
-                                placeholder="License Number"/>
+            <div class="modal-content">
+                <div class="modal-header border-0">
+                    <h3 class="modal-title fs-22" id="exampleModalToggleLabel">Fill the missing Details</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-4">
+                        <h4 class="title fs-18 mb-3">Driver 2</h4>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <input class="form-control " type="text" placeholder="License Number" />
+                            </div>
+                            <div class="col-sm-6">
+                                <input class="form-control addPrefer" type="text" placeholder="Aged 1st Licensed" />
+                            </div>
                         </div>
-                        <div class="col-sm-6">
-                            <input class="form-control addPrefer" type="text"
-                                placeholder="Aged 1st Licensed"/>
+                    </div>
+                    <div class="mb-4">
+                        <h4 class="title fs-18 mb-3">Driver 3</h4>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <input class="form-control addPrefer" type="text" placeholder="License Number" />
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="mb-4">
-                    <h4 class="title fs-18 mb-3">Driver 3</h4>
-                    <div class="row g-3">
-                        <div class="col-sm-6">
-                            <input class="form-control addPrefer" type="text"
-                                placeholder="License Number"/>
-                        </div>
-                    </div>
+                <div class="modal-footer justify-content-center  border-0">
+                    <button class="btn btn-primary" data-bs-dismiss="modal"><span
+                            class="position-relative">Save</span></button>
                 </div>
             </div>
-            <div class="modal-footer justify-content-center  border-0">
-                <button class="btn btn-primary" data-bs-dismiss="modal"><span class="position-relative">Save</span></button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
     <script src="js/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="js/app.js"></script>
     <script>
         $(document).ready(function () {
@@ -336,8 +346,9 @@
                 console.log('item:', item)
             })
             $('.customize-options').hide()
-            $('#Coverage').on('change', function(){
-                $('#Coverage').is(':checked') ? ($('.customize-options').show()) : ($('.customize-options').hide())
+            $('#Coverage').on('change', function () {
+                $('#Coverage').is(':checked') ? ($('.customize-options').show()) : ($(
+                    '.customize-options').hide())
             })
         })
     </script>
