--- a/src/36-policy-limit.html
+++ b/src/36-policy-limit.html
@@ -44,7 +44,39 @@
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
                 <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                    aria-valuemax="100" style="width:20%">
 
+                                </div>
+
+                            </div>
+                            <div class="progress-text mt-1">Drivers</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                    aria-valuemax="100" style="width:0%">
+
+                                </div>
+
+                            </div>
+                            <div class="progress-text mt-1">Vehicles & Coverages
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                    aria-valuemax="100" style="width:0%">
+
+                                </div>
+
+                            </div>
+                            <div class="progress-text mt-1">Discounts</div>
+                        </div>
+                    </div>
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
