--- a/src/45-own-or-rent.html
+++ b/src/45-own-or-rent.html
@@ -117,8 +117,42 @@
             </nav>
             <div class="content-main">
                 <div class="content">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:20%">
 
-                    <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Drivers</div>
+                            </div>
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:0%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Vehicles & Coverages
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:0%">
+
+                                    </div>
+
+                                </div>
+                                <div class="progress-text mt-1">Discounts</div>
+                            </div>
+                        </div>
+                        <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
+                    </div>
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
