--- a/src/active-insurance.html
+++ b/src/active-insurance.html
@@ -30,7 +30,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
@@ -117,7 +120,7 @@
 
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
@@ -125,9 +128,9 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">About your vehicle & Drivers</div>
+                                <div class="progress-text mt-1">Drivers</div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -135,9 +138,10 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Policy Limits</div>
+                                <div class="progress-text mt-1">Vehicles & Coverages
+                                </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -145,7 +149,7 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Price Compare & Purchase</div>
+                                <div class="progress-text mt-1">Discounts</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -159,8 +163,9 @@
 
 
                         <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center mt-4">
-                            <button type="submit" class="btn btn-primary mb-2 mb-sm-0  me-sm-4"><span>Yes</span></button>
-                        
+                            <button type="submit"
+                                class="btn btn-primary mb-2 mb-sm-0  me-sm-4"><span>Yes</span></button>
+
                             <button type="submit" class="btn btn-outline "><span>No</span></button>
                         </div>
 
