--- a/src/drivers-lic-detail.html
+++ b/src/drivers-lic-detail.html
@@ -29,7 +29,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -43,16 +46,17 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid">
+                <div class="container-fluid text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
 
                     </div>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -74,7 +78,7 @@
 
                         <!-- https://codepen.io/aaroniker/pen/XxBjKN?editors=0100-->
 
-                        <div class="f-group me-md-3 pe-md-2">
+                        <div class="f-group me-3 pe-2">
 
                             <select class="f-control f-dropdown" placeholder="Please choose 2">
                                 <option value=""> </option>
@@ -86,23 +90,30 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 d-none d-md-inline">
-                        <img src="./images/user.svg" alt="" class="d-none d-md-inline">
+                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-left" aria-current="page" href="#"> <img
+                                            src="./images/message-question-blue.svg" alt=""
+                                            class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
+                                        Help
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link  text-left" href="#">
+                                        <img src="./images/user-blue.svg" alt=""
+                                            class="nav-icon d-inline-block  nav-icon-mob">
+                                        User</a>
                                 </li>
 
                             </ul>
@@ -115,7 +126,7 @@
                 <div class="content">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
@@ -123,9 +134,9 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">About your vehicle & Drivers</div>
+                                <div class="progress-text mt-1">Drivers</div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -133,9 +144,10 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Policy Limits</div>
+                                <div class="progress-text mt-1">Vehicles
+                                </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
@@ -143,7 +155,7 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Price Compare & Purchase</div>
+                                <div class="progress-text mt-1">Discounts</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -156,23 +168,24 @@
                         <h3 class="title  text-center">What’s your license number & age first licensed?</h3>
 
                         <div class="contain-wrapper-sm">
-                            <form class="mt-4" >
+                            <form class="mt-4">
                                 <div class="blue-light-box">
                                     <div class="d-flex justify-content-between">
                                         <h4 class="title fs-18 mb-2">Applicant /Primary Insured</h4>
                                         <label class="checkbox-inline mb-3 w-auto" for="flexCheckDefault">
-                                            <input class="checkbox-control" type="checkbox" value="" id="flexCheckDefault">
+                                            <input class="checkbox-control" type="checkbox" value=""
+                                                id="flexCheckDefault">
                                             <span class="checkbox-custom"></span>
                                             <span class="checkbox-label">Will be a driver</span>
                                         </label>
                                     </div>
                                     <div class="row g-3 mb-4">
-                                        <div class="col-sm-6">
+                                        <div class="col-6">
                                             <button class="upload-btn" onclick="importData()"> <img
                                                     src="./images/camera.svg" alt="" class="me-2" alt="">Scan
                                                 License</button>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-6">
                                             <button class="upload-btn" onclick="importDatalicence()"><img
                                                     src="./images/add-plus.svg" alt="" class="me-2" alt="">Upload
                                                 License</button>
@@ -183,11 +196,11 @@
                                             <input class="form-control addMain" type="text"
                                                 placeholder="License Number" />
                                         </div>
-                                        <div class="col-sm-4">
+                                        <div class="col-sm-4 col-6">
                                             <input class="form-control addPrefer" type="text"
                                                 placeholder="Aged 1st Licensed" />
                                         </div>
-                                        <div class="col-sm-4">
+                                        <div class="col-sm-4 col-6">
                                             <div class="f-group max-width-100">
 
                                                 <select class="f-control f-dropdown" placeholder="Marital Status"
@@ -289,8 +302,7 @@
                                 </div> -->
 
 
-                                <button type="submit"
-                                    class="btn btn-primary mx-auto mt-4"><span>Continue</span>
+                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </form>
                         </div>
@@ -303,10 +315,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="js/app.js"></script>
 
 </body>
