--- a/src/25-address.html
+++ b/src/25-address.html
@@ -166,8 +166,11 @@
                             <div class="white-box  contain-wrapper-sm mb-4 mt-4">
                                 <div class="mb-4">
                                     <h4 class="fs-18 mb-12px">Edit address if it’s changed</h4>
-                                    <input class="form-control" type="text"
+                                    <input class="form-control d-none d-md-block" type="text"
                                         value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
+
+                                    <textarea class="form-control d-md-none pt-1 pb-1" id="exampleFormControlTextarea1"
+                                        rows="4">2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States</textarea>
                                 </div>
                                 <div class="mb-4">
                                     <h4 class="fs-18 mb-12px">Are all vehicles normally parked here at night?</h4>
@@ -184,8 +187,13 @@
                                             <span class="radio-label">No</span>
                                         </label>
                                     </div>
-                                    <input class="form-control address-field mt-3" type="text"
-                                        value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
+                                    <input class="form-control address-field mt-3 d-none
+                                        d-md-flex" type="text"
+                                        value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States " />
+
+                                    <textarea class=" mt-3 form-control address-field d-md-none pt-1 pb-1"
+                                        id="exampleFormControlTextarea1"
+                                        rows="4">2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States</textarea>
                                 </div>
 
                                 <div>
@@ -204,8 +212,13 @@
                                             <span class="radio-label">No</span>
                                         </label>
                                     </div>
-                                    <input class="form-control mail-address-field mt-3" type="text"
+                                    <input class="form-control mail-address-field mt-3 d-none
+                                        d-md-flex" type="text"
                                         value="2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States" />
+
+                                    <textarea class="form-control  mail-address-field  mt-3 d-md-none pt-1 pb-1"
+                                        id="exampleFormControlTextarea1"
+                                        rows="4">2415 N Monroe St Suite 810, Tallahassee, FL 32303, United States</textarea>
                                 </div>
 
                             </div>
