--- a/src/30-which-vehical-policy.html
+++ b/src/30-which-vehical-policy.html
@@ -46,16 +46,17 @@
     <main>
         <div class="wrapper">
             <nav class="navbar bg-dark fixed-top">
-                <div class="container-fluid">
+                <div class="container-fluid text-center">
 
                     <div class="d-flex align-items-center justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
 
                     </div>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -77,7 +78,7 @@
 
                         <!-- https://codepen.io/aaroniker/pen/XxBjKN?editors=0100-->
 
-                        <div class="f-group me-md-3 pe-md-2">
+                        <div class="f-group me-3 pe-2">
 
                             <select class="f-control f-dropdown" placeholder="Please choose 2">
                                 <option value=""> </option>
@@ -89,23 +90,30 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 d-none d-md-inline">
-                        <img src="./images/user.svg" alt="" class="d-none d-md-inline">
+                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active text-left" aria-current="page" href="#"> <img
+                                            src="./images/message-question-blue.svg" alt=""
+                                            class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
+                                        Help
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link  text-left" href="#">
+                                        <img src="./images/user-blue.svg" alt=""
+                                            class="nav-icon d-inline-block  nav-icon-mob">
+                                        User</a>
                                 </li>
 
                             </ul>
@@ -136,7 +144,7 @@
                                     </div>
 
                                 </div>
-                                <div class="progress-text mt-1">Vehicles & Coverages
+                                <div class="progress-text mt-1">Vehicles
                                 </div>
                             </div>
                             <div class="col-4">
@@ -166,22 +174,22 @@
                                         <h4 class="title fs-18 mb-2">Vehicle 1</h4>
                                     </div>
                                     <div class="row g-3 mb-4">
-                                        <div class="col-sm-6">
+                                        <div class="col-6">
                                             <button class="upload-btn" onclick="importData()"> <img
-                                                    src="./images/camera.svg" alt="" class="me-2" alt="">Scan
+                                                    src="./images/camera.svg" alt="" class="me-2" alt="">
                                                 Scan VIN</button>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-6">
                                             <button class="upload-btn" onclick="importDatalicence()"><img
                                                     src="./images/add-plus.svg" alt="" class="me-2" alt="">Upload
-                                                Upload VIN Document</button>
+                                                VIN Document</button>
                                         </div>
                                     </div>
                                     <div class="row g-3">
-                                        <div class="col-sm-6">
+                                        <div class="col-md-6 col-12">
                                             <input class="form-control addMain" type="text" placeholder="VIN Number" />
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-md-6 col-12">
                                             <div class="f-group max-width-100">
 
                                                 <select class="f-control f-dropdown"
@@ -196,32 +204,24 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-6">
                                             <input class="form-control addPrefer" type="text"
                                                 placeholder="Miles Driven Per year" />
                                         </div>
-                                        <div class="col-sm-6">
-                                            <div class="f-group max-width-100">
+                                        <div class="col-6">
+                                            <input class="form-control addMain d-none d-md-block" type="text"
+                                                placeholder="Odometer /Vehicle Mileage" />
+                                            <input class="form-control addMain d-md-none" type="text" placeholder="Odometer Reading
+" />
 
-                                                <select class="f-control f-dropdown"
-                                                    placeholder="Current Vehicle Mileage" id="multiple"
-                                                    class="js-states form-control" multiple>
-                                                    <option value=""> Current Vehicle Mileage</option>
-                                                    <option value="1">Single
-                                                    </option>
-                                                    <option value="2">Married
-                                                    </option>
-
-                                                </select>
-                                            </div>
                                         </div>
                                         <div class="col-12">
                                             <label class="checkbox-inline mb-3 w-auto" for="flexCheckDefault">
                                                 <input class="checkbox-control" type="checkbox" value=""
                                                     id="flexCheckDefault" checked>
                                                 <span class="checkbox-custom"></span>
-                                                <span class="checkbox-label fs-12 fw-bold">Do you want towing & roadside
-                                                    assistance?</span>
+                                                <span class="checkbox-label fs-12 fw-bold">Towing & Roadside assistance
+                                                </span>
                                             </label>
                                         </div>
                                         <div class="col-12">
@@ -244,14 +244,14 @@
                                                 <div class="col-md-6">
                                                     <h5 class="fs-12">Is this vehicles being Financed or leased</h5>
                                                     <div class="d-flex">
-                                                        <label class="radio-box w-auto me-4" for="full">
+                                                        <label class="radio-box w-auto me-4" for="yes">
                                                             <input class="radio-box-control" type="radio" name="leased"
-                                                                value="" id="full" checked>
+                                                                value="" id="yes" checked>
                                                             <span class="radio-box-custom">Yes</span>
                                                         </label>
-                                                        <label class="radio-box w-auto" for="basic">
+                                                        <label class="radio-box w-auto" for="no">
                                                             <input class="radio-box-control" type="radio" name="leased"
-                                                                value="" id="basic">
+                                                                value="" id="no">
                                                             <span class="radio-box-custom">No </span>
                                                         </label>
                                                     </div>
@@ -281,7 +281,7 @@
                                 </div>
                                 <div class="row justify-content-between">
                                     <div class="col-sm-6">
-                                        <a class="btn-add mt-3 ms-3" href="#">
+                                        <a class="btn-add mt-3 ms-md-3" href="#">
                                             <img src="images/add-pluse-circle.svg" alt="Add" class="icon" />
                                             Add Vehicle
                                         </a>
@@ -291,7 +291,7 @@
                                             <input class="checkbox-control" type="checkbox" value=""
                                                 id="flexCheckDefault" checked>
                                             <span class="checkbox-custom"></span>
-                                            <span class="checkbox-label">Keep same liability limits </span>
+                                            <span class="checkbox-label">Same liability limits for all vehicles </span>
                                         </label>
                                     </div>
 
@@ -333,7 +333,7 @@
                                             </span>
                                         </label>
                                         <div class="customize-options mt-3">
-                                            <div class="d-flex justify-content-between">
+                                            <div class="d-flex justify-content-between mb-2">
                                                 <h4 class="fs-16  mb-2">Customize Options</h4 class="fs-16">
                                                 <label class="checkbox-inline w-auto me-3  mb-2"
                                                     for="flexCheckDefault212">
@@ -344,26 +344,26 @@
                                                 </label>
                                             </div>
                                             <div class="row g-3">
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-4 col-6">
                                                     <input class="form-control" type="text"
                                                         placeholder="Bodily Injured">
                                                 </div>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-4 col-6">
                                                     <input class="form-control" type="text"
                                                         placeholder="Personal Injury Ded">
                                                 </div>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-4 col-6">
                                                     <input class="form-control" type="text" placeholder="Uninsured">
                                                 </div>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-4 col-6">
                                                     <input class="form-control" type="text"
                                                         placeholder="Property Damage">
                                                 </div>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-4 col-6">
                                                     <input class="form-control" type="text"
                                                         placeholder="Optional Bodily Injury">
                                                 </div>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-4 col-6">
                                                     <input class="form-control" type="text"
                                                         placeholder="Medical Payments">
                                                 </div>
