all-comments-done

--- a/src/19-current-insurance-company.html
+++ b/src/19-current-insurance-company.html
@@ -178,10 +178,9 @@
                                     <select class="f-control f-dropdown" placeholder="Select Insurance Company"
                                         id="multiple" class="js-states form-control" multiple>
                                         <option value="">Select Insurance Company</option>
-                                        <option value="1" selected>Select Insurance Company 1
-                                        </option>
-                                        <option value="2">Select Insurance Company 2
-                                        </option>
+                                        <option value="1">Not Sure
+
+
 
                                     </select>
                                 </div>
