--- a/src/20-duration-without-cancellation.html
+++ b/src/20-duration-without-cancellation.html
@@ -178,9 +178,9 @@
                                     <select class="f-control f-dropdown" placeholder="Select Time" id="multiple"
                                         class="js-states form-control" multiple>
                                         <option value="">Select Time</option>
-                                        <option value="1" selected>Select Time 1
+                                        <option value="1">Option 1
                                         </option>
-                                        <option value="2">Select Time 2
+                                        <option value="2">Option 2
                                         </option>
 
                                     </select>
