--- a/src/27-gpa-info.html
+++ b/src/27-gpa-info.html
@@ -162,15 +162,33 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
                         <h3 class="title  text-center">Any Drivers With A 3.0 GPA/B Average or Better ?</h3>
+                        <div class=" text-center mt-4">
+                            <label class="checkbox-inline mb-0 w-auto" for="None">
+                                <input class="checkbox-control main" type="checkbox" value="" id="None" checked>
+                                <span class="checkbox-custom"></span>
+                                <span class="checkbox-label fs-16 fw-700">NONE</span>
+                            </label>
+                        </div>
                         <form>
                             <div class="white-box contain-wrapper-sm mb-4 mt-4">
-                                <div class="mb-4">
+
+                                <p class="text-black mt-2 fs-18 fw-500  text-left pb-3 d-none d-md-block">Report card
+                                    or
+                                    Transcript with a
+                                    3.0 GPA or better required
+                                </p>
+
+                                <p class="text-black mt-2 fs-18 fw-500  text-center pb-3 d-md-none">Report card or
+                                    Transcript with a
+                                    3.0 GPA <br />or better required
+                                </p>
+                                <!-- <div class="mb-4">
                                     <label class="checkbox-inline w-auto me-3 mb-0" for="none">
                                         <input class="checkbox-control main" type="checkbox" value="" id="none" checked>
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">None</span>
                                     </label>
-                                </div>
+                                </div> -->
                                 <div class="bottomoption menuitemshow">
                                     <div class="mb-4">
                                         <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
