--- a/src/31-select-vehical-coverage.html
+++ b/src/31-select-vehical-coverage.html
@@ -188,8 +188,8 @@
                                         </div>
                                         <div class="flex-grow-1 flex-shrink-0">
                                             <div class="d-flex align-items-center justify-content-md-end">
-                                                <h5 class="fs-12 me-4 flex-shrink-0 w-sm-100 w-md-auto">Which coverage
-                                                    would you like</h5>
+                                                <h5 class="fs-12 me-4 flex-shrink-0 w-sm-100 w-md-auto">Vehicle Coverage
+                                                </h5>
                                                 <label class="radio-box w-auto me-4" for="full">
                                                     <input class="radio-box-control" type="radio" name="country2"
                                                         value="" id="full" checked="">
