--- a/src/32-select-vehical-coverage.html
+++ b/src/32-select-vehical-coverage.html
@@ -211,7 +211,7 @@
                                             <div class="row g-3 mb-4">
                                                 <div class="col-6">
                                                     <button class="upload-btn" onclick="importData()"> <img
-                                                            src="./images/camera.svg" alt="" class="me-2" alt="">Scan
+                                                            src="./images/camera.svg" alt="" class="me-2" alt="">
                                                         Scan VIN</button>
                                                 </div>
                                                 <div class="col-6">
