--- a/src/35-coverage-level.html
+++ b/src/35-coverage-level.html
@@ -327,17 +327,37 @@
                                             <div class="accordion-body pt-0">
                                                 <div class="row g-3">
                                                     <div class="row g-3">
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Vehicle Name" />
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
+                                                        <div class="col-md-6 col-12">
+                                                            <input class="form-control addMain" type="text"
                                                                 placeholder="VIN Number" />
                                                         </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Miles Driven Yearly" />
+                                                        <div class="col-md-6 col-12">
+                                                            <div class="f-group max-width-100">
+
+                                                                <select class="f-control f-dropdown"
+                                                                    placeholder="Who’s Driving the Most" id="multiple"
+                                                                    class="js-states form-control" multiple>
+                                                                    <option value=""> Who’s Driving the Most
+                                                                    </option>
+                                                                    <option value="1">Single
+                                                                    </option>
+                                                                    <option value="2">Married
+                                                                    </option>
+
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addPrefer" type="text"
+                                                                placeholder="Miles Driven Per year" />
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addMain d-none d-md-block"
+                                                                type="text" placeholder="Odometer /Vehicle Mileage" />
+                                                            <input class="form-control addMain d-md-none" type="text"
+                                                                placeholder="Odometer Reading
+" />
+
                                                         </div>
 
                                                         <div class="col-12">
@@ -380,17 +400,36 @@
                                             <div class="accordion-body pt-0">
                                                 <div class="row g-3">
                                                     <div class="row g-3">
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Vehicle Name" />
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
+                                                        <div class="col-md-6 col-12">
+                                                            <input class="form-control addMain" type="text"
                                                                 placeholder="VIN Number" />
                                                         </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Miles Driven Yearly" />
+                                                        <div class="col-md-6 col-12">
+                                                            <div class="f-group max-width-100">
+
+                                                                <select class="f-control f-dropdown"
+                                                                    placeholder="Who’s Driving the Most" id="multiple"
+                                                                    class="js-states form-control" multiple>
+                                                                    <option value=""> Who’s Driving the Most</option>
+                                                                    <option value="1">Single
+                                                                    </option>
+                                                                    <option value="2">Married
+                                                                    </option>
+
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addPrefer" type="text"
+                                                                placeholder="Miles Driven Per year" />
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addMain d-none d-md-block"
+                                                                type="text" placeholder="Odometer /Vehicle Mileage" />
+                                                            <input class="form-control addMain d-md-none" type="text"
+                                                                placeholder="Odometer Reading
+" />
+
                                                         </div>
 
                                                         <div class="col-12">
@@ -583,17 +622,36 @@
                                             <div class="accordion-body pt-0">
                                                 <div class="row g-3">
                                                     <div class="row g-3">
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Vehicle Name" />
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
+                                                        <div class="col-md-6 col-12">
+                                                            <input class="form-control addMain" type="text"
                                                                 placeholder="VIN Number" />
                                                         </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Miles Driven Yearly" />
+                                                        <div class="col-md-6 col-12">
+                                                            <div class="f-group max-width-100">
+
+                                                                <select class="f-control f-dropdown"
+                                                                    placeholder="Who’s Driving the Most" id="multiple"
+                                                                    class="js-states form-control" multiple>
+                                                                    <option value=""> Who’s Driving the Most</option>
+                                                                    <option value="1">Single
+                                                                    </option>
+                                                                    <option value="2">Married
+                                                                    </option>
+
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addPrefer" type="text"
+                                                                placeholder="Miles Driven Per year" />
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addMain d-none d-md-block"
+                                                                type="text" placeholder="Odometer /Vehicle Mileage" />
+                                                            <input class="form-control addMain d-md-none" type="text"
+                                                                placeholder="Odometer Reading
+" />
+
                                                         </div>
 
                                                         <div class="col-12">
@@ -634,17 +692,36 @@
                                             <div class="accordion-body pt-0">
                                                 <div class="row g-3">
                                                     <div class="row g-3">
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Vehicle Name" />
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
+                                                        <div class="col-md-6 col-12">
+                                                            <input class="form-control addMain" type="text"
                                                                 placeholder="VIN Number" />
                                                         </div>
-                                                        <div class="col-sm-4">
-                                                            <input class="form-control" type="text"
-                                                                placeholder="Miles Driven Yearly" />
+                                                        <div class="col-md-6 col-12">
+                                                            <div class="f-group max-width-100">
+
+                                                                <select class="f-control f-dropdown"
+                                                                    placeholder="Who’s Driving the Most" id="multiple"
+                                                                    class="js-states form-control" multiple>
+                                                                    <option value=""> Who’s Driving the Most</option>
+                                                                    <option value="1">Single
+                                                                    </option>
+                                                                    <option value="2">Married
+                                                                    </option>
+
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addPrefer" type="text"
+                                                                placeholder="Miles Driven Per year" />
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <input class="form-control addMain d-none d-md-block"
+                                                                type="text" placeholder="Odometer /Vehicle Mileage" />
+                                                            <input class="form-control addMain d-md-none" type="text"
+                                                                placeholder="Odometer Reading
+" />
+
                                                         </div>
 
                                                         <div class="col-12">
