--- a/src/46-who-is-your-insurance.html
+++ b/src/46-who-is-your-insurance.html
@@ -202,7 +202,7 @@
                                         <label for="radio-switch-2-2">
                                             <input type="file" name="radios-3" id="radio-switch-2-2">
                                             <div style="flex-direction: row;"
-                                                class="  my-4 h-auto p-3 radio-switch-state d-flex align-items-center justify-content-start flex-nowrap ">
+                                                class="  my-4 h-auto p-3 upload-boxx radio-switch-state d-flex align-items-center justify-content-start flex-nowrap ">
                                                 <img src="./images/upload.svg" width="50" />
                                                 <p class="ins-title position-unset ms-3 fs-15 ins-titlee">Click to
                                                     upload copy of
