--- a/src/51-lower-price.html
+++ b/src/51-lower-price.html
@@ -306,8 +306,9 @@
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content">
                     <div class="modal-header border-0 d-block">
-                        <a style="position: relative !important;" class="text-blue position-relative ms-0 back-arrow"
-                            href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
+                        <a style="position: relative !important;" data-bs-dismiss="modal"
+                            class="text-blue position-relative ms-0 back-arrow" href="#"><i
+                                class="fa fa-arrow-left-long me-2"></i>BACK</a>
                         <h4 class="title fs-16 mb-0 mx-auto text-center mt-3 ">We’re making adjustment to lower your
                             price... Just
                             takes a
@@ -371,8 +372,10 @@
                             </div>
                         </div>
 
-                        <button class="btn btn-primary mt-3 text-center mx-auto" data-bs-target="#exampleModalToggle"
-                            data-bs-toggle="modal" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary mt-3 text-center mx-auto"
+                            data-bs-dismiss="modal"><span>Close</span></button>
+
+
                     </div>
                 </div>
 
