--- a/src/56-create-new-acnt.html
+++ b/src/56-create-new-acnt.html
@@ -191,12 +191,12 @@
                                         </div>
                                         <div class="col-sm-6">
                                             <input class="form-control addMain" type="text"
-                                                placeholder="Account Number" />
+                                                placeholder="Confirm Password" />
                                         </div>
 
 
 
-                                        <div class="col-12 mt-4">
+                                        <div class="col-12 mt-4 pt-2">
                                             <label class="checkbox-inline mb-2 w-auto" for="flexCheckDefault">
                                                 <input class="checkbox-control" type="checkbox" value=""
                                                     id="flexCheckDefault" checked>
@@ -204,7 +204,7 @@
                                                 <span class="checkbox-label fs-14">Remember me</span>
                                             </label>
                                         </div>
-                                        <div class="col-12 mt-4">
+                                        <div class="col-12 mt-2">
                                             <label class="checkbox-inline mb-2 w-auto" for="flexCheckDefault-automatic">
                                                 <input class="checkbox-control" type="checkbox" value=""
                                                     id="flexCheckDefault-automatic" checked>
